--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,15 +1,23 @@
 .header {
   position: absolute;
   width: 100%;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 3em;
+  h1 {
+    font-size: 30px;
+    color: #ffffff;
+  }
   .navigation {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 3em;
 
     ul {
       display: flex;
+      margin-right: 2em;
+      color: #ffffff;
       li {
         margin: 10px;
       }
@@ -36,10 +44,51 @@
     .close {
       display: none;
     }
+  }
+  .mobile-menu {
+    width: 30px;
+    display: none;
+  }
+}
+.wrapper {
+  padding: 0 6em;
+  margin: 0 auto;
+}
+.bg {
+  background: url("/assets/bg/bg0.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.btn {
+  padding: 10px 40px;
+  border-radius: 5px;
+}
+.yellow {
+  color: #cafc01;
+}
+.home_banner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  h1 {
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 72px;
+    color: #ffffff;
+  }
+  p {
+    font-size: 20px;
+    margin: 30px 0;
+    color: #ffffff;
+  }
 
-    .mobile-menu {
-      width: 30px;
-      display: none;
-    }
+  .btn {
+    background-color: #a8d201;
+    color: #000000;
+    font-weight: 500;
   }
 }
