--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -1,4 +1,63 @@
 @media screen and (max-width: 480px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+
+    .mobile-menu {
+      display: block;
+    }
+    .navigation {
+      display: none;
+      position: absolute;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0;
+      top: 2.5em;
+      left: 0;
+      background-color: #a8d201;
+      width: 100%;
+      height: 30vh;
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        li {
+          margin: 10px;
+        }
+      }
+      .button {
+        display: flex;
+        align-items: center;
+        background: #a8d201;
+        padding: 10px;
+        border-radius: 10px;
+      }
+      .connectBtn {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        right: 0;
+        top: 0;
+        // width: 200px;
+        .firstBtn {
+          margin: 0;
+          margin-bottom: 10px;
+        }
+      }
+      .desktop {
+        display: none;
+      }
+      .close {
+        display: block;
+      }
+    }
+    .navigation-open {
+      display: flex;
+    }
+  }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
 }
